bobcat (2.09.01)

  * Added new classes ReadLineBuf and ReadLineStream reading the standard
    input using the Gnu readline library, wrapped inside, respectively, a
    streambuf and an istream. These classes require linkage to libreadline.
    The class ReadLineBuf is a singleton class.

  * Added new class ReadLineHistory allowing easy handling of the history
    accumulated by the ReadLineBuf class.  The class ReadLineHistory is a
    singleton class.

  * Virtual members of classes derived from std::streambuf were move to the
    the private section of the classes, making these classes more compliant
    with Liskov's Substitution Principle.

  * The 'sync' members of classes derived from std::streambuf can be called
    from derived classes using a protected 'pSync' member. The IOStreambuf
    class offers comparable protected 'pSeekoff' and 'pSeekpos' and 'pXsputn',
    allowing the seek and put operations to be performed on request 
    by classes derived from IOStreambuf.

  * NOTE: Errno's virtual member what() will be moved to Errno's private
          section in a future release. The new public member 'why' should be
          used instead, or std::exception::what() should be used.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 14 Oct 2010 21:35:00 +0200

bobcat (2.08.01)

  * Checked in overlooked repairs of hostent/destroy.cc and
    TableSupport::setCols.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 05 May 2010 11:13:47 +0200

bobcat (2.08.00)

  * >>>NOTE<<<: Due to a changed organization of the Table classes all
    software using the 2.07.04 shared library's Table and TableSupport classes
    needs to be recompiled.

  * Added new class TableBuf. A streambuf class allowing table constructions
    using std::ostream objects

  * Added new class (only used internally by Bobcat): TableBase, containing 
    the common to TableBuf and Table

  * Added new class TableLines derived from TableSupport setting separating