@@ -15,7 +15,7 @@
     // BSD/MacOSX systems. Don't contact me if you experience any problems
     // with Karel's script. Instead, contact Karel directly.
 
-#define STATIC
+//#define STATIC
     // When compiling Bobcat for CYGWIN under Windows, activate the above
     // #define: it will prevent the construction of the shared library (until
     // somebody tells me how to do that under CYGWIN....)
