@@ -1,8 +1,9 @@
 //  FBB::Errno
 
 #include "errno"
-
 #include <cstring>
+#include <fstream>
+
 #include <errno.h>
 
 #include <sys/types.h>
