@@ -10,3 +10,7 @@
 using namespace std;
 using namespace FBB;
 
+namespace FBB
+{
+    void showOpen();
+}
