@@ -2,6 +2,8 @@
 
 void Msg::open(std::ofstream &out, std::string const &name)
 {
+    showOpen();
+
     out.open(name.c_str());
 
     if (!out)
