@@ -1,4 +1,4 @@
-bobcat (2.09.01)
+bobcat (2.09.00)
 
   * Added new classes ReadLineBuf and ReadLineStream reading the standard
     input using the Gnu readline library, wrapped inside, respectively, a
@@ -23,7 +23,13 @@ bobcat (2.09.01)
           section in a future release. The new public member 'why' should be
           used instead, or std::exception::what() should be used.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 14 Oct 2010 21:35:00 +0200
+  * The class Msg is now deprecated. Classes Mstream (Message stream) and Mbuf
+    (Message buf) have replaced Msg, and Msg's open members have moved to
+    Errno. Msg will remain in Bobcat for a while, but will eventualy be
+    removed. An error message is displayed (once) if Msg::msg() and 
+    Msg::open() are used.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 28 Oct 2010 20:17:50 +0200
 
 bobcat (2.08.01)
 
